# depo

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTES.md  README.md  TODO-jun-2025.md  TODO.md  depo.ipynb  manage  package-lock.json  pyproject.toml  requirements.txt  users.example.json
core/: apps.py  models.new.py  models.py  shortcode.py  test_models.py  test_shortcode.py  test_views.py  tests.py  tests_old.py  urls.py  views.py
core/link/: models.py  tests.py
core/migrations/: 0001_initial.py  0002_remove_item_url_linkitem.py  0002_rename_shortcode_item.py
core/models/: __init__.py  item.py  link.py  pic.py  user.py
core/pic/: model.py  models.py  test.py
core/services/: upload.py
core/templates/: 404.html  base.html  index.html  item-created.html  login.html  navbar.html  shortcode-details.html  upload.html
core/tests/: fixtures.py
core/user/: models.py  tests.py  views.py
core/util/: classifier.py  content.py  files.py  log.py  logging.py  test_shortcode.py  types.py  validator.py
core/views/: index.py  raw_download.py  shortcode.py  upload.py  upload_api.py  user.py
core/viewsnew/: user.py
depo/: asgi.py  settings.py  urls.py  wsgi.py
doc/: README.md
doc/design/: README.md  architecture.md  conformance.md  errors.md  ingest.md  items.md  language.md  mvp.md  patterns.md  process.md  routes.md  shortcodes.md  styles.md  v1.md
doc/module/: README.md  cli.md  model.md  repo.md  service.md  storage.md  templates.md  util.md  web.md
doc/planning/: README.md  handoff.md  mvp.md  tasks.md  unplanned.md  v0.2.md  v02.md  v1.md
docs/: README.md  api.md  logging.md
link/: urls.py  views.py
scripts/: audit-conformance-vectors.sh  generate-conformance-vectors.py  generate-test-patterns.sh  hash-b32.sh
src/depo/: __main__.py
tests/: conftest.py  factories.py  helpers.py
tests/cli/: test_config.py  test_defaults.py  test_main.py
tests/factories/: __init__.py  config.py  db.py  dto.py  models.py  payloads.py  test_factories.py  web.py
tests/fixtures/: __init__.py  db.py  storage.py
tests/helpers/: __init__.py  assertions.py  test_assertions.py
tests/model/: test_enums.py  test_formats.py  test_item.py  test_user.py  test_write_plan.py
tests/repo/: test_errors.py  test_sqlite.py
tests/service/: test_classify.py  test_ingest.py  test_media.py  test_orchestrator.py  test_selector.py
tests/storage/: test_filesystem.py
tests/util/: test_errors.py  test_password.py  test_validate.py  (+1 more)
(+115 files in other folders)
