[project]
name = "depo"
version = "0.0.0"
description = "Content-addressed paste / image service"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.10",
  "pytest>=8.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

