[project]
name = "depo"
version = "0.0.0"
description = "Content-addressed paste / image service"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.128.5",
    "pillow>=12.1.0",
    "python-multipart>=0.0.22",
    "rich>=14.3.2",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
depo = "depo.cli.main:cli"

[tool.uv]
dev-dependencies = [
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-xdist",
  "httpx>=0.28.1",
  "pytest-asyncio>=1.3.0",
]

[tool.pytest]
testpaths = ["tests"]
pythonpath = ["src", "."]


[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

